<resources>
    <string name="app_name">Help Me!</string>
    <string name="title">Help Me!</string>
    <string name="subtitle">Don’t worry, everything is going to be okay.</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_prompt">Already have a Help Me account?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="identity_number">Identity Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="agreement">By signing up, you agree to our Terms of Service, Privacy Policy, and Disclaimer.</string>
    <string name="forgot_password">forgot your password?</string>
    <string name="engine_init_error">Map engine initialization</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sos">SOS</string>
</resources>